Updated command to ProcessBuilder